--- a/views/pages/auth.ejs
+++ b/views/pages/auth.ejs
@@ -1,21 +1,138 @@
-<!-- views/pages/auth.ejs -->
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>Google SignIn</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        body        { padding-top:70px; }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IntelliCity</title>
+    <link rel="shortcut icon" href="css/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<div class="container">
-    <div class="jumbotron text-center text-primary">
-        <h1><span class="fa fa-lock"></span> Social Authentication</h1>
-        <p>Login or Register with:</p>
-        <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google"></span> SignIn with Google</a>
+    <div id="loader">
+        <h1>INNOVATE</h1>
+        <h1>INTEGRATE</h1>
+        <h1>INSPIRE</h1>
     </div>
-</div>
+    <div id="fixed-image">
+
+    </div>
+    <div id="main">
+
+        <div id="page1">
+            <nav>
+                <img src="css/logo1.png"
+                    alt="" style="width: 10%;">
+                <div id="nav-part2">
+                    <h4><a href="#">Work</a></h4>
+                    <h4><a href="#">Projects</a></h4>
+                    <h4><a href="/auth/google">Sign in</a></h4>
+                </div>
+                <h3>Menu</h3>
+            </nav>
+            <div id="center">
+                <div id="left">
+                    <h3>IntelliCity Tech Solutions is a leading innovator in the realm of smart city solutions, dedicated to shaping urban landscapes into efficient, connected, and sustainable environments.</h3>
+                </div>
+                <div id="right">
+                    <h1>SOLUTIONS <br>
+                        THAT <br>
+                        INSPIRE</h1>
+                </div>
+
+            </div>
+            <div id="hero-shape">
+                <div id="hero-1"></div>
+                <div id="hero-2"></div>
+                <div id="hero-3"></div>
+            </div>
+            <video autoplay loop muted src="css/video.mp4"></video>
+        </div>
+        <div id="page2">
+            <div id="moving-text">
+                <div class="con">
+                    <h1>INNOVATE</h1>
+                    <div id="gola"></div>
+                    <h1>INTEGRATE</h1>
+                    <div id="gola"></div>
+                    <h1>INSPIRE</h1>
+                    <div id="gola"></div>
+                </div>
+                <div class="con">
+                    <h1>INNOVATE</h1>
+                    <div id="gola"></div>
+                    <h1>INTEGRATE</h1>
+                    <div id="gola"></div>
+                    <h1>INSPIRE</h1>
+                    <div id="gola"></div>
+                </div>
+                <div class="con">
+                    <h1>INNOVATE</h1>
+                    <div id="gola"></div>
+                    <h1>INTEGRATE</h1>
+                    <div id="gola"></div>
+                    <h1>INSPIRE</h1>
+                    <div id="gola"></div>
+                </div>
+            </div>
+            <div id="page2-bottom">
+                <h1>Our mission is to empower cities with cutting-edge technologies, fostering a seamless integration of smart infrastructure, data analytics, and sustainability practices.</h1>
+                <div id="bottom-part2">
+                    <img src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-500.jpg"
+                        alt="">
+                    <p>We aim to create cities that are not only intelligent but also resilient, inclusive, and responsive to the evolving needs of their residents. We’re here to partner with you through every step of the process and know that
+                        relationships are the most important things we build.</p>
+                </div>
+            </div>
+            <div id="gooey">
+
+            </div>
+        </div>
+        <div id="page3">
+            <div id="elem-container">
+                <div id="elem1" class="elem"
+                    data-image="https://images.unsplash.com/photo-1682687221038-404cb8830901?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                    <div class="overlay"></div>
+                    <h2>INNOVATE</h2>
+                </div>
+                <div class="elem"
+                    data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
+                    <div class="overlay"></div>
+                    <h2>CONNECT</h2>
+                </div>
+                <div class="elem"
+                    data-image="https://images.unsplash.com/photo-1701077137611-9be394bf62f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D">
+                    <div class="overlay"></div>
+                    <h2>THRIVE</h2>
+                </div>
+                <div class="elem"
+                    data-image="https://images.unsplash.com/photo-1701014159309-4a8b84faadfe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D">
+                    <div class="overlay"></div>
+                    <h2>EMPOWER</h2>
+                </div>
+                <div class="elem"
+                    data-image="https://images.unsplash.com/photo-1700924546093-f914fd5b8814?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D">
+                    <div class="overlay"></div>
+                    <h2>REVOLUTIONIZE</h2>
+                </div>
+                <div class="elem"
+                    data-image="https://images.unsplash.com/photo-1700601437860-e66da79cf6d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHx8fA%3D%3D">
+                    <div class="overlay"></div>
+                    <h2>CATALYZE</h2>
+                </div>
+                <div class="elem"
+                    data-image="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2OXx8fGVufDB8fHx8fA%3D%3D">
+                    <div class="overlay"></div>
+                    <h2>ILLUMINATE</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
-</html> 
+</html>
