--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -23,22 +23,7 @@
     <div id="main">
 
         <div id="page1">
-            <nav>
-                <img src="css/logo1.png"
-                    alt="" style="width: 10%;">
-                <div id="nav-part2">
-                    <h4><a href="#">Work</a></h4>
-                    <h4><a href="#">Projects</a></h4>
-
-                    <% if(user) { %>
-                        <h4 style="padding-left: 0%; padding-top: 0%; padding-bottom: 0%;"><a><img src="<%= user.photos[0].value %>" style="height: 6vh; width: 3vw; border-radius: 50%;" />&nbsp;&nbsp;&nbsp;Hi, <%= user.displayName.split(" ")[0] %></a></h4>
-                        <!-- <h4><a href="/auth/logout">Logout</a></h4> -->
-                        <% } else { %>
-                            <h4><a href="/auth/google">Sign in</a></h4>
-                            <% } %>
-                </div>
-                <h3>Menu</h3>
-            </nav>
+            <%- include('../includes/nav.ejs'); %>
             <div id="center">
                 <div id="left">
                     <h3>IntelliCity Tech Solutions is a leading innovator in the realm of smart city solutions, dedicated to shaping urban landscapes into efficient, connected, and sustainable environments.</h3>
@@ -136,7 +121,20 @@
                 </div>
             </div>
         </div>
+        <div id="page5">
+            <!-- <div id="footer-div">
+                <a href="https://www.instagram.com/">Work</a><br>
+                <a href="">Projects</a>
+            </div>
+            <p>Get industry insights and creative inspiration straight to your inbox.</p> -->
+        </div>
+        <div id="full-scr">
+            <div id="full-div1">
+
+            </div>
+        </div>
     </div>
+    <%- include('../includes/footer.ejs'); %>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
