--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -1,8 +1,9 @@
 <nav>
-  <img src="css/logo1.png"
-      alt="" style="width: 10%;">
+    <a href="/">  <img src="css/logo1.png"
+        alt="" style="width: 40%;"></a>
+
   <div id="nav-part2">
-      <h4><a href="#">Work</a></h4>
+      <h4><a href="/works">Works</a></h4>
       <h4><a href="#">Projects</a></h4>
 
       <% if(user) { %>
