--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IntelliCity</title>
-    <link rel="shortcut icon" href="css/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/style.css">
-</head>
+<%- include('../includes/head.ejs'); %>
 
 <body>
     <div id="loader">
@@ -122,11 +114,7 @@
             </div>
         </div>
         <div id="page5">
-            <!-- <div id="footer-div">
-                <a href="https://www.instagram.com/">Work</a><br>
-                <a href="">Projects</a>
-            </div>
-            <p>Get industry insights and creative inspiration straight to your inbox.</p> -->
+            
         </div>
         <div id="full-scr">
             <div id="full-div1">
@@ -135,8 +123,6 @@
         </div>
     </div>
     <%- include('../includes/footer.ejs'); %>
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <%- include('../includes/scripts.ejs'); %>
 </body>
 </html>
