--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -3,6 +3,7 @@
         alt="" style="width: 40%;"></a>
 
   <div id="nav-part2">
+      <h4><a href="/">Home</a></h4>
       <h4><a href="/works">Works</a></h4>
       <h4><a href="#">Projects</a></h4>
 
