--- a/views/pages/works.ejs
+++ b/views/pages/works.ejs
@@ -29,7 +29,6 @@
             <p>Crafting the concepts and experiences. Connecting the dots and amplifying the story.</p>
             <div style="width: 100%;">
               <h2><span>01</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Strategy & Ideation</h2>
-              <!-- <hr style="color: #c89867;"> -->
               <h2><span>02</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Concept Development</h2>
               <h2><span>03</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Environmental Design</h2>
               <h2><span>04</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graphic Design</h2>
@@ -41,7 +40,8 @@
         </div>
         <br><br><br><br>
         <div class="workinfodiv">
-          <h1>CREATE</h1>
+          <h1 style="font-size: 17.8vw;">INTEGRATE</h1>
+          <br><br>
           <div style="display: flex;">
             <p>Crafting the concepts and experiences. Connecting the dots and amplifying the story.</p>
             <div style="width: 100%;">
@@ -58,7 +58,8 @@
         </div>
         <br><br><br><br>
         <div class="workinfodiv">
-          <h1>CREATE</h1>
+          <h1 style="font-size: 17vw;">IMPLEMENT</h1>
+          <br><br>
           <div style="display: flex;">
             <p>Crafting the concepts and experiences. Connecting the dots and amplifying the story.</p>
             <div style="width: 100%;">
