--- a/views/pages/works.ejs
+++ b/views/pages/works.ejs
@@ -18,7 +18,7 @@
         <br><br><br><br><br>
        <div style="display: flex; align-items: center;">
         <img style="border-radius: 20px; position: relative; height: 50vh; width: 20vw; margin-left: 4vw;" src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15e2_Studio%2520Image-p-500.jpg" alt="" srcset="">
-        <p>We love creating experiences from idea to install, but are also comfortable jumping into a project at any point in the process, from Creative, to Design, to Project Management and Implementation.</p>
+        <p>We love creating experiences from idea to reality, but are also comfortable jumping into a project at any point in the process, from Creative, to Design, to Project Management and Implementation.</p>
        </div>
       </div>
       <div id="workpage2">
@@ -43,16 +43,16 @@
           <h1 style="font-size: 17.8vw;">INTEGRATE</h1>
           <br><br>
           <div style="display: flex;">
-            <p>Crafting the concepts and experiences. Connecting the dots and amplifying the story.</p>
+            <p>Production, strategy, partnership, and materials. The end point is more than the sum of its parts.</p>
             <div style="width: 100%;">
-              <h2><span>01</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Strategy & Ideation</h2>
+              <h2><span>01</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Project Management</h2>
               <!-- <hr style="color: #c89867;"> -->
-              <h2><span>02</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Concept Development</h2>
-              <h2><span>03</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Environmental Design</h2>
-              <h2><span>04</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graphic Design</h2>
-              <h2><span>05</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Visual Merchandising</h2>
-              <h2><span>06</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3D Renderings</h2>
-              <h2><span>07</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Consumer Experience</h2>
+              <h2><span>02</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Budget Ownership</h2>
+              <h2><span>03</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Technical Drawings</h2>
+              <h2><span>04</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Digital & Technology Integration</h2>
+              <h2><span>05</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Custom Fabrication</h2>
+              <h2><span>06</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graphics Production</h2>
+              <h2><span>07</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Material Samples & Prototyping</h2>
             </div>
           </div>
         </div>
@@ -61,16 +61,15 @@
           <h1 style="font-size: 17vw;">IMPLEMENT</h1>
           <br><br>
           <div style="display: flex;">
-            <p>Crafting the concepts and experiences. Connecting the dots and amplifying the story.</p>
+            <p>Onsite guidance, installation and oversight to take each project through to the finish line.</p>
             <div style="width: 100%;">
-              <h2><span>01</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Strategy & Ideation</h2>
+              <h2><span>01</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Onsite Project Management</h2>
               <!-- <hr style="color: #c89867;"> -->
-              <h2><span>02</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Concept Development</h2>
-              <h2><span>03</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Environmental Design</h2>
-              <h2><span>04</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Graphic Design</h2>
-              <h2><span>05</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Visual Merchandising</h2>
-              <h2><span>06</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3D Renderings</h2>
-              <h2><span>07</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Consumer Experience</h2>
+              <h2><span>02</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Installation Oversight</h2>
+              <h2><span>03</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sustainability Consulting</h2>
+              <h2><span>04</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Site Survey/Permitting</h2>
+              <h2><span>05</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Onsite Logistics</h2>
+              <h2><span>06</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Photography & Videography</h2>
             </div>
           </div>
         </div>
