--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,11 +4,11 @@
 <%- include('../includes/head.ejs'); %>
 
 <body>
-    <div id="loader">
+    <!-- <div id="loader">
         <h1>INNOVATE</h1>
         <h1>INTEGRATE</h1>
         <h1>INSPIRE</h1>
-    </div>
+    </div> -->
     <div id="fixed-image">
 
     </div>
@@ -77,37 +77,37 @@
         <div id="page3">
             <div id="elem-container">
                 <div id="elem1" class="elem"
-                    data-image="https://images.unsplash.com/photo-1682687221038-404cb8830901?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://media.istockphoto.com/id/1152956520/photo/shanghai-city-network-technology.jpg?s=2048x2048&w=is&k=20&c=C5pr53ILSiqy5CTu9J44ULRKgHy-CCvPwJv5MdESOhA=">
                     <div class="overlay"></div>
                     <h2>INNOVATE</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
+                    data-image="https://media.istockphoto.com/id/1317903256/vector/smart-city-5g-technology-online-communication-network.jpg?s=2048x2048&w=is&k=20&c=k9NY_6VbGi3UzodqwaBJ4R22GgW-7Jz4eIXUwtWzjSc=">
                     <div class="overlay"></div>
                     <h2>CONNECT</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1701077137611-9be394bf62f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://media.istockphoto.com/id/1466695065/photo/electricity-from-solar-panels-dams-and-wind-turbines-environmentally-friendly-renewable.jpg?s=2048x2048&w=is&k=20&c=uLYnhfupzb7vs_nmedo_whSGLDAzY2riw59SfCgmDTc=">
                     <div class="overlay"></div>
                     <h2>THRIVE</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1701014159309-4a8b84faadfe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://media.istockphoto.com/id/1154285896/photo/hong-kong-night-city.jpg?s=2048x2048&w=is&k=20&c=oTEHd88tDmk3J3XVGWRN8oAKjZ5E1N_J1E1YJAaEETE=">
                     <div class="overlay"></div>
                     <h2>EMPOWER</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700924546093-f914fd5b8814?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://media.istockphoto.com/id/1315531273/photo/financial-district-and-business-centers-in-smart-city.jpg?s=2048x2048&w=is&k=20&c=U8bJRnC21S1374ur6Hew6HytjATSwsF0VYaezpDMKyE=">
                     <div class="overlay"></div>
                     <h2>REVOLUTIONIZE</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700601437860-e66da79cf6d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://media.istockphoto.com/id/1201354362/photo/smart-city-and-communication-network-concept-5g-lpwa-wireless-communication.jpg?s=2048x2048&w=is&k=20&c=jqD-6whGlCWXQjM-Fkfo44aQzdptCZqz1Ao5Rp3hq_w=">
                     <div class="overlay"></div>
                     <h2>CATALYZE</h2>
                 </div>
                 <div class="elem"
-                    data-image="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2OXx8fGVufDB8fHx8fA%3D%3D">
+                    data-image="https://media.istockphoto.com/id/1343387262/photo/the-hong-kong-city-skyline.jpg?s=2048x2048&w=is&k=20&c=loOT6buDranoJsvtI-ZM26D16v_k1DMZjMIyGULVVVk=">
                     <div class="overlay"></div>
                     <h2>ILLUMINATE</h2>
                 </div>
